# aiwynns-idea-factory

./: .gitignore  .mcp.json  MCP-QUICKSTART.md  MCP-README.md  README.md  WORKSPACE-SETUP.md  idea-factory  pyproject.toml  requirements.txt  setup-idea-factory.sh  setup.sh
.claude/: README.md  settings.local.json
aiwynns/: __init__.py  __main__.py  app.py  creator.py  database.py  exceptions.py  exporter.py  indexer.py  logging_config.py  mcp_server.py  search.py  similarity.py  stats.py  validation.py
resources/: romantasy-tropes.md
scripts/: list-concepts.sh  new-batch.sh  new-story.sh  search.sh  stats.sh  update-index.sh
templates/: concept-batch.md  story-development.md
tests/: __init__.py  conftest.py  test_creator.py  test_database.py  test_exceptions.py  test_logging.py  test_search.py  test_validation.py
